--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "@nuxt/content": "^1.14.0",
+    "@nuxt/http": "^0.6.4",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/composition-api": "^0.33.1",
+    "@pinia/nuxt": "0.2.1",
     "airtable-node": "^0.1.20",
     "core-js": "^3.15.1",
     "dotenv": "^10.0.0",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "pinia": "^2.0.23"
   },
   "devDependencies": {
     "@nuxtjs/google-fonts": "^1.3.0",
