--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@nuxt/content": "^1.14.0",
     "@nuxt/http": "^0.6.4",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/composition-api": "^0.33.1",
+    "@nuxtjs/markdownit": "^2.0.0",
     "airtable-node": "^0.1.20",
     "core-js": "^3.15.1",
     "dotenv": "^10.0.0",
