--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,9 @@
 [build]
  functions = "./functions"
 
+[functions]
+node_bundler = "zisi"
+
 [[redirects]]
  from = "/api/*"
  to = "/.netlify/functions/:splat"
